# upal

./: .gitignore  Makefile  README.md  upal.cabal
examples/: church.ul  loop.ul  loop2.ul  stuff.ul
src/: Equiv.hs  Eval.hs  Main.hs  Parser.hs  Pretty.hs  Run.hs  Syntax.hs  Typechecker.hs  Utils.hs
